--- a/travel_tracker/templates/base.html
+++ b/travel_tracker/templates/base.html
@@ -36,7 +36,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('.home') }}">Home</a></li>
 
-                    {% if not current_user.is_authenticated %}
+                    {% if not current_user.is_authenticated() %}
                         <li><a href="{{ url_for('.login') }}">Login</a></li>
                         <li><a href="{{ url_for('.register') }}">Sign Up</a></li>
                     {% else %}
