--- a/travel_tracker/templates/dashboard.html
+++ b/travel_tracker/templates/dashboard.html
@@ -3,18 +3,48 @@
 {%block title%}Home{% endblock %}
 
 {%block body%}
-    
-    <h1 class="text-center">Logged in</h1>
+
+    <h1 class="text-center">Dashboard</h1>
 
     <div class="row">
-        
+
     </div>
 
     <div class="row">
-        
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+          <form role="form"
+                action="{{ url_for('.add_group', next=request.args.get('next')) }}"
+                method="post"
+                enctype="multipart/form-data">
+              {{ form.hidden_tag() }}
+
+              <div class="form-group">
+                  {{ form.group_name.label }}
+                  {% if form.group_name.errors %}
+                      {% for e in form.group_name.errors %}
+                          <p class="help-block">{{ e }}</p>
+                      {% endfor %}
+                  {% endif %}
+                  {{ form.username(class_="form-control") }}
+              </div>
+              <div class="form-group">
+                  {{ form.password.label }}
+                  {% if form.password.errors %}
+                      {% for e in form.password.errors %}
+                          <p class="help-block">{{ e }}</p>
+                      {% endfor %}
+                  {% endif %}
+                  {{ form.password(class_="form-control") }}
+              </div>
+
+              <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+      </div>
+      <div class="col-md-4"></div>
     </div>
 
     <div class="row">
-        
+
     </div>
 {%endblock%}
