--- a/travel_tracker/templates/security/login_user.html
+++ b/travel_tracker/templates/security/login_user.html
@@ -12,29 +12,36 @@
                   action="{{ url_for('.login', next=request.args.get('next')) }}"
                   method="post"
                   enctype="multipart/form-data">
-                {{ form.hidden_tag() }}
+                {{ login_user_form.hidden_tag() }}
 
                 <div class="form-group">
-                    {{ form.username.label }}
-                    {% if form.username.errors %}
-                        {% for e in form.username.errors %}
+                    {{ login_user_form.email.label }}
+                    {% if login_user_form.email.errors %}
+                        {% for e in login_user_form.email.errors %}
                             <p class="help-block">{{ e }}</p>
                         {% endfor %}
                     {% endif %}
-                    {{ form.username(class_="form-control") }}
+                    {{ login_user_form.email(class_="form-control") }}
                 </div>
                 <div class="form-group">
-                    {{ form.password.label }}
-                    {% if form.password.errors %}
-                        {% for e in form.password.errors %}
+                    {{ login_user_form.password.label }}
+                    {% if login_user_form.password.errors %}
+                        {% for e in login_user_form.password.errors %}
                             <p class="help-block">{{ e }}</p>
                         {% endfor %}
                     {% endif %}
-                    {{ form.password(class_="form-control") }}
+                    {{ login_user_form.password(class_="form-control") }}
                 </div>
 
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
+            {% macro social_login(provider_id, display_name) %}
+              <form action="{{ url_for('social.login', provider_id=provider_id) }}" method="POST">
+                <input type="submit" value="Login with {{ display_name }}" />
+              </form>
+            {% endmacro %}
+
+            {{ social_login('facebook', 'Facebook' )}}
         </div>
         <div class="col-md-4"></div>
     </div>
