--- a/travel_tracker/templates/security/register_user.html
+++ b/travel_tracker/templates/security/register_user.html
@@ -14,19 +14,20 @@
                   enctype="multipart/form-data">
                 {{ form.hidden_tag() }}
 
-                {% if form.username.errors %}
+                {% if form.email.errors %}
                 <div class="form-group has-error">
                 {% else %}
                 <div class="form-group">
                 {% endif %}
-                    {{ form.username.label }}
-                    {% if form.username.errors %}
-                        {% for e in form.username.errors %}
+                    {{ form.email.label }}
+                    {% if form.email.errors %}
+                        {% for e in form.email.errors %}
                             <p class="help-block">{{ e }}</p>
                         {% endfor %}
                     {% endif %}
-                    {{ form.username(class_="form-control") }}
+                    {{ form.email(class_="form-control") }}
                 </div>
+
                 {% if form.password.errors %}
                 <div class="form-group has-error">
                 {% else %}
@@ -52,19 +53,6 @@
                         {% endfor %}
                     {% endif %}
                     {{ form.confirm_password(class_="form-control") }}
-                </div>
-                {% if form.email.errors %}
-                <div class="form-group has-error">
-                {% else %}
-                <div class="form-group">
-                {% endif %}
-                    {{ form.email.label }}
-                    {% if form.email.errors %}
-                        {% for e in form.email.errors %}
-                            <p class="help-block">{{ e }}</p>
-                        {% endfor %}
-                    {% endif %}
-                    {{ form.email(class_="form-control") }}
                 </div>
                 {% if form.recaptcha.errors %}
                 <div class="form-group has-error">
@@ -95,6 +83,7 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
-        <div class="col-md-4"></div>
+        <div class="col-md-4">
+        </div>
     </div>
 {%endblock %}
